# Backend/src/waste/handlers/handler_factory.go
@@ -6,6 +6,7 @@ import (
 	pb "../protos"
 	"context"
 	"encoding/base64"
+	_ "encoding/base64"
 	"encoding/json"
 	"fmt"
 	"io/ioutil"
@@ -33,24 +34,28 @@ type DetectResult struct {
 func (*WasteServer) WasteDetect(ctx context.Context, in *pb.WasteRequest) (*pb.WasteReply,error){
 	log.Println("垃圾检测请求：BinId", in.BinId, "WasteImage len:",len(in.WasteImage))
 	var ret pb.WasteReply
+	var image []byte
+	var image_of_base64 *url.URL
+	var err error
 	ret.ResId = -1
 
-	// 读取本地文件转base64
-	image,_ := ioutil.ReadFile("G:\\git\\AutoBin\\Backend\\src\\waste\\test1.jpg")
-	log.Println("image length:",len(image))
-	image_of_base64, err := url.Parse(base64.StdEncoding.EncodeToString(image))	// base64编码
-	if err != nil {
-		log.Fatal(err)
-		return &pb.WasteReply{}, err
+	if len(in.WasteImage) < 100 {	// 读取本地文件转base64
+		image,_ = ioutil.ReadFile("G:\\git\\AutoBin\\Backend\\src\\waste\\test1.jpg")
+		log.Println("image length:",len(image))
+		image_of_base64, err = url.Parse(base64.StdEncoding.EncodeToString(image))	// base64编码
+		if err != nil {
+			log.Fatal(err)
+			return &pb.WasteReply{}, err
+		}
+	} else {
+		// 直接接收base64图片
+		image = []byte(in.WasteImage)
+		image_of_base64, err = url.Parse(in.WasteImage)	// base64编码
+		if err != nil {
+			log.Fatal(err)
+			return &ret, nil
+		}
 	}
-
-	/// 直接接收base64图片
-	//image := []byte(in.WasteImage)
-	//image_of_base64, err := url.Parse(in.WasteImage)	// base64编码
-	//if err != nil {
-	//	log.Fatal(err)
-	//	return &ret, nil
-	//}
 
 	/// 调用百度api识别图片
 	config := conf.Config
@@ -71,8 +76,8 @@ func (*WasteServer) WasteDetect(ctx context.Context, in *pb.WasteRequest) (*pb.W
 		return &ret, nil
 	}
 	log.Println("图像识别结果:",string(data))
-	var resData DetectResult
-	err = json.Unmarshal(data, &resData)
+	var resData DetectResult	// 识别结果数据
+	err = json.Unmarshal(data, &resData)	// 解析Json数据
 	if err != nil {
 		funcName,file,line,_ := runtime.Caller(0)
 		log.Println(  runtime.FuncForPC(funcName).Name(),file,line,err)
@@ -80,6 +85,7 @@ func (*WasteServer) WasteDetect(ctx context.Context, in *pb.WasteRequest) (*pb.W
 	}
 	/// 调用分类api获取分类信息
 	waste_name, type_id, err:= getRes(resData.Result)
+	ret.WasteName = waste_name
 	log.Println("垃圾分类结果: ",waste_name, ":",type_id)
 	/// 存储信息到数据库 图片，结果
 	go func() {
@@ -94,15 +100,15 @@ func (*WasteServer) WasteDetect(ctx context.Context, in *pb.WasteRequest) (*pb.W
 		log.Println(  runtime.FuncForPC(funcName).Name(),file,line,err)
 		return &ret, nil
 	}
-
 	ret.ResId = int64(type_id)
+	log.Println("ret:",ret.ResId,ret.WasteName)
 	return &ret,nil
 }
 
 // 状态上报
 func (*WasteServer) BinStatus(ctx context.Context, in *pb.BinStatusRequest) (ret *pb.Null, err error){
 	fmt.Println("状态上报请求：BinId:", in.BinId, " Status:",in.Status)
-	err = db.UpdateBinStatus(int(in.BinId), int(in.Status))
+	err = db.UpdateBinStatus(int(in.BinId), int(in.Status),in.Angel,in.Temp)
 	if err != nil {
 		funcName,file,line,_ := runtime.Caller(0)
 		log.Println(  runtime.FuncForPC(funcName).Name(),file,line,err)
@@ -114,8 +120,12 @@ func (*WasteServer) BinStatus(ctx context.Context, in *pb.BinStatusRequest) (ret
 
 // 垃圾桶注册
 func (*WasteServer) BinRegister(ctx context.Context, in *pb.BinRegisterRequest) ( *pb.BinRegisterReply, error){
-	fmt.Println("垃圾桶注册请求：UserId:",in.UserId)
+	fmt.Println("垃圾桶注册请求：UserId:",in.UserId,"BinId:",in.BinId, "in.IpAddress:",in.IpAddress)
 	var ret pb.BinRegisterReply
+	if in.BinId >= 0 {
+		ret.BinId = in.BinId
+		return &ret,nil
+	}
 	bin_id, err := db.AddBin(int(in.UserId))
 	if err != nil {
 		funcName,file,line,_ := runtime.Caller(0)
